:Make the app neat

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                 <p>When I am not coding, you can find me blogging, exploring new coffee shops, walking in the bush, camping in somewhere or travelling around the world.  </p>
             </div>
             <div class="col-lg-4 myImage">
-                <img class="img-rounded" src="arm.jpg">
+                <img class="img-rounded" src="css/img/arm.jpg">
             </div>
         </div>
     </div>
