--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="me" class="row">
             <div class="col-lg-12">
                 <h1 class="title name">Armagan Ersoz</h1>
-                <p id="myTitle" class="subtitle"> </p>
+                <p id="myTitle" class="subtitle">Software Engineer, Blogger, Coffee Addict, Open Source Geek</p>
             </div>
         </div>
     </div>
