--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 <nav class="navbar navbar-default navbar-fixed-top" >
     <div class="container">
         <div class="navbar-header navbar-right">
-            <a class="navbar-brand" href="index.html">HOME</a>
+            <a class="navbar-brand" href=".">HOME</a>
             <a class="navbar-brand" href="about.html">ABOUT</a>
         </div>
     </div>
@@ -56,10 +56,11 @@
 
                 <p>I am also a blogger. Check <a href="https://arminwonderlandblog.wordpress.com/" target="_blank">this</a> out! - Sorry, but unfortunately it is only in Turkish -</p>
 
-                <p>When I am not coding, you can find me blogging, exploring new coffee shops, walking in the bush, camping in somewhere or travelling around the world.  </p>
+                <p>When I am not coding, I spend significant portion of my time on making polymer clay charms. You can see my craft <a href="https://instagram.com/unicornsincities/" target="_blank">here</a>, if you like.</p>
+                <p>When I am not coding and playing my clays, you can find me blogging, exploring new coffee shops, walking in the bush, camping in somewhere or travelling around the world.  </p>
             </div>
             <div class="col-lg-4 myImage">
-                <img class="img-rounded" src="css/img/arm.jpg">
+                <img class="img-rounded" src="img/arm.jpg">
             </div>
         </div>
     </div>
@@ -69,6 +70,7 @@
 	    <a href="https://github.com/broccolinisoup" target="_blank"><i class="fa fa-github"></i></a>
 	    <a href="https://www.linkedin.com/in/armaganersoz" target="_blank"><i class="fa fa-linkedin"></i></a>
 	    <a href="https://twitter.com/broccolinisoup" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://instagram.com/unicornsincities/" target="_blank"><i class="fa fa-instagram"></i></a>
     </span>
         <div class="wrapper">
             <p>Made with <i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i>. Many thanks to <a href="https://github.com" target="_blank">Github</a> for free hosting <i class="fa fa-heart-o"></i>.</p>
