--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
                 <p>I am also a blogger. Check <a href="https://arminwonderlandblog.wordpress.com/" target="_blank">this</a> out! - Sorry, but unfortunately it is only in Turkish -</p>
 
-                <p>When I am not coding, I spend significant portion of my time on making polymer clay charms. You can see my craft <a href="https://instagram.com/unicornsincities/" target="_blank">here</a>, if you like.</p>
+                <p>When I am not coding, I spend significant portion of my time on making polymer clay charms. You can see my crafts <a href="https://instagram.com/unicornsincities/" target="_blank">here</a>, if you like.</p>
                 <p>When I am not coding and playing my clays, you can find me blogging, exploring new coffee shops, walking in the bush, camping in somewhere or travelling around the world.  </p>
             </div>
             <div class="col-lg-4 myImage">
