--- a/my_messages.html
+++ b/my_messages.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>x-domain Ex</title>
   <script>
     function receiveMessage (event) {
     	if (event.origin !== "http://localhost:8080") {
+        console.log("Ups, sorry hacker, we build secure applications!")
     		return;
     	}
     	else {
@@ -11,13 +13,13 @@
     		document.getElementById("my-msg").innerHTML = message;
     	}
     }
-
     window.addEventListener("message", receiveMessage, false);
 
   </script>
 
 </head>
 <body>
+  Your inbox:
   <p id="my-msg"></p>
 </body>
 </html>
