Update the website

--- a/about.html
+++ b/about.html
@@ -47,17 +47,14 @@
         <div class="row">
             <div class="col-lg-8">
                 <h1>Hi there!</h1>
-                <p>My name is Armagan. I am living in Brisbane, Australia and currently working as a software engineer at Red Hat.
-                    Developing software backend systems particularly web-based systems, which includes system / database
-                    administration are my professional interests. I do enjoy frontend development as well but backend is always my preference.
-                    If you wanna see my skills, check out <a href="https://www.linkedin.com/in/armaganersoz" target="_blank">my Linkedin profile</a> or if you feel more curios about what I am developing, then check out <a href="https://github.com/broccolinisoup" target="_blank">my Github account</a>. </p>
-                <p>I support and encourage more school girls and women to pursue their careers in technology. I am a part of these awesome communities; <a href="http://www.kadinyazilimci.com/" target="_blank">Kadin Yazilimci (Women Developers community based in Turkey)</a>, <a href="https://www.womenwhocode.com/" target="_blank">Women Who Code</a>,
-                    <a href="http://www.techgirlsmovement.org/" target="_blank">Tech Girls Movement</a>.</p>
-
-                <p>I am also a blogger. Check <a href="https://arminwonderlandblog.wordpress.com/" target="_blank">this</a> out! - Sorry, but unfortunately it is only in Turkish -</p>
-
-                <p>When I am not coding, I spend significant portion of my time on making polymer clay charms. You can see my crafts <a href="https://instagram.com/unicornsincities/" target="_blank">here</a>, if you like.</p>
-                <p>When I am not coding and playing my clays, you can find me blogging, exploring new coffee shops, walking in the bush, camping in somewhere or travelling around the world.  </p>
+                <p>My name is Armagan.
+I'm a software engineer with nearly a decade of experience and currently working at RedEye Apps.
+I specialise in developing web-based software systems, particularly in front-end development. I’m also a co-organiser of <a href="http://musescodejs.org/" target="_blank">Muses Code JS Brisbane</a>, a group dedicated to running coding workshops for women and trans folks throughout Australia. If you wanna see my skills, check out <a href="https://www.linkedin.com/in/armaganersoz" target="_blank">my Linkedin profile</a>
+                    or if you feel more curios about what I am developing, then check out
+                    <a href="https://github.com/broccolinisoup" target="_blank">my Github account</a>.
+                </p>
+                <p>When I’m not coding or organising another Muses event, you can find me making polymer clay charms,
+                    walking my dog, or road tripping around the world.</p>
             </div>
             <div class="col-lg-4 myImage">
                 <img class="img-rounded" src="img/arm.jpg">
@@ -70,10 +67,9 @@
 	    <a href="https://github.com/broccolinisoup" target="_blank"><i class="fa fa-github"></i></a>
 	    <a href="https://www.linkedin.com/in/armaganersoz" target="_blank"><i class="fa fa-linkedin"></i></a>
 	    <a href="https://twitter.com/broccolinisoup" target="_blank"><i class="fa fa-twitter"></i></a>
-        <a href="https://instagram.com/unicornsincities/" target="_blank"><i class="fa fa-instagram"></i></a>
     </span>
         <div class="wrapper">
-            <p>Made with <i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i>. Many thanks to <a href="https://github.com" target="_blank">Github</a> for free hosting <i class="fa fa-heart-o"></i>.</p>
+            <p>Made with <i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i>. Thanks to <a href="https://github.com" target="_blank">Github</a> for free hosting <i class="fa fa-heart-o"></i>.</p>
         </div>
     </div>
 </section>
