--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div class="container">
         <div id="me" class="row">
             <div class="col-lg-12">
-                <h1 class="title name">Armagan Ersoz</h1>
-                <p id="myTitle" class="subtitle">Software Engineer, Blogger, Coffee Addict, Open Source Geek</p>
+                <h1 class="title name">Armağan E.</h1>
+                <p id="myTitle" class="subtitle">Software Engineer, Muses Code JS Organiser, Diversity and Inclusion Activist</p>
             </div>
         </div>
     </div>
